--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,13 +8,14 @@ environment:
 
 configuration: Release
 platform:
-  - x86
   - x64
 
 install:
   - SET PATH=C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin;%PATH%
   - ps: Install-Product node $env:nodejs_version $env:platform
-  - npm install
+  - SET PATH=%APPDATA%\npm;%APPVEYOR_BUILD_FOLDER%\node_modules\.bin;%PATH%
+  - git submodule update --init --recursive
+  - npm i
 
 test_script:
   - node --version
