--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
   "devDependencies": {
     "benchmark": "^2.1.4",
     "chai": "^3.5.0",
+    "jshint": "^2.9.4",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
     "node-gyp": "^3.6.0",
-    "prebuild": "8.2.1",
-    "rimraf": "^2.6.1",
-    "jshint": "^2.9.4"
+    "prebuild": "^8.2.1",
+    "rimraf": "^2.6.1"
   }
 }
