--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ skip_branch_with_pr: true
 
 environment:
   matrix:
+    - nodejs_version: "8"
+    - nodejs_version: "10"
     - nodejs_version: "Current"
 
 configuration: Release
