--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,11 @@ test_script:
   - node --version
   - npm --version
 
-after_test:
-  - ps: If ($env:nodejs_version -eq "Current") { npm run prebuild }
+before_deploy:
+  - SET ARCHIVE_NAME=%APPVEYOR_REPO_TAG_NAME%-win32-%PLATFORM%.tar.gz
+  - npm run prebuild
+  - tar -zcvf "%ARCHIVE_NAME%" -C prebuilds .
+  - appveyor PushArtifact %ARCHIVE_NAME%
 
 artifacts:
   - path: prebuilds
