--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,6 @@ skip_branch_with_pr: true
 environment:
   matrix:
     - nodejs_version: "10"
-    - nodejs_version: "Current"
 
 configuration: Release
 platform:
@@ -36,4 +35,4 @@ deploy:
       secure: cenas-appveyor
     on:
       appveyor_repo_tag: true
-      nodejs_version: "Current"
+      nodejs_version: "10"
