--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,13 +22,15 @@ test_script:
   - npm --version
 
 artifacts:
-  - path: build\release
-    name: node-lmdb.node
+  - path: win32-x64
+    name: node.abi64.node
 
+before_deploy:
+    - cp build\release\node-lmdb.node win32-x64\node.abi64.node
 
 deploy:
   - provider: GitHub
-    artifact: node-lmdb.node
+    artifact: node.abi64.node
     draft: false
     prerelease: true
     auth_token:
